2009-08-06 Roman
- !!:/UI/WebCfg: Interface translation to German is added by Irina Popkova.
- !!:/SYS: Removed files which creation by "autoreconf -iv" from repository.
- FIX:/Archive/FSArch: Resource get is fixed for aprchive's files pack for messages.
- /System/FLibSYS: The algorithm of realisation function floatMergeWord() is some changed.
- FIX:/UI/Vision, /UI/QTCfg: Events going to underlie button on time increase and decrease buttons is fixed for LineEdit element on last QT 4.5.


2009-08-05 Roman
- !!:/UI/Vision: Interface translation to German is added by Irina Popkova.
- FIX:/Archive, /UI/WebVision: LibGD2 function gdImageStringFT error open font print is added. Drawing images without text is released.


2009-08-04 Maxim,Roman
- FIX:/DAQ/JavaLikeCalc: Object source detect is fixed.


2009-08-02 Roman
- FIX:/UI/Vision, /UI/WebVision: Trend size less one second is fixed and memory leak at trend error is fixed for UI.WebVision.
- FIX:/UI/WebVision: Parent seting for widgets to self crash is fixed.


2009-07-28 Roman
- !!:/Special/FLibSYS: The function for FFT processing archive's data is added to object "VArchObj".
    The functions for loading and saving XML-tree to string or file is added to object "XMLNodeObj".
- FIX:/UI/Vision: Documents print is fixed by set default font size into points.


2009-07-27 Roman
- /SYS/DAQ: The permitions for fields of control interface is changed to "root":"DAQ".
- !!!!:/SYS: The function TSYS::cron() is added for tasks planing by standard Cron.
- !!:/DAQ/JavaLikeCalc: Add support to set calc time into Cron standard.
- !!:/Special/FLibSYS: Added time plane function tmCron in standard Cron.


2009-07-24 Roman
- !!!!:/Special/FLibSYS: The "XMLNodeObj" object and function xmlNode() for it create and function xmlCntrReq() for send request 
    to control interface of OpenSCADA is added.
- !!!!:/Special/FLibSYS: The "VArchObj" object and functions vArh(), vArhBuf() for it create is added. Used for full access to value archives.