@@ -986,9 +986,10 @@ class floatSplitWord : public TFunction
 
 	void calc( TValFunc *val )
 	{
-	    float vl = val->getR(0);
-	    val->setI(1,*((ui16*)&vl));
-	    val->setI(2,*(((ui16*)&vl)+1));
+	    union { ui32 i; float f; } wl;
+	    wl.f = val->getR(0);
+	    val->setI(1,wl.i&0xFFFF);
+	    val->setI(2,(wl.i>>16)&0xFFFF);
 	}
 };
 
@@ -1010,8 +1011,9 @@ class floatMergeWord : public TFunction
 
 	void calc( TValFunc *val )
 	{
-	    ui32 vl = ((val->getI(2)&0xffff)<<16) | val->getI(1)&0xffff;
-	    val->setR(0,*(float*)&vl);
+	    union { ui32 i; float f; } wl;
+	    wl.i = ((val->getI(2)&0xffff)<<16) | val->getI(1)&0xffff;
+	    val->setR(0,wl.f);
 	}
 };
 
