@@ -71,6 +71,7 @@ class LineEdit : public QWidget
 	void setCfg( const QString& );
 
 	QWidget *workWdg( )	{ return ed_fld; }
+	void viewApplyBt( bool view );
 
     signals:
 	void apply( );
@@ -87,6 +88,7 @@ class LineEdit : public QWidget
     private:
 	LType		m_tp;
 	QString		m_val;
+	bool		mPrev;
 	QWidget		*ed_fld;
 	QPushButton	*bt_fld;
 };
