@@ -391,44 +391,42 @@ bool UserStBar::userSel()
 //* QTimeEdit, QDateEdit and QDateTimeEdit.                                                   *
 //*********************************************************************************************
 LineEdit::LineEdit( QWidget *parent, LType tp, bool prev_dis ) :
-    QWidget( parent ), m_tp((LineEdit::LType)-1), bt_fld(NULL), ed_fld(NULL)
+    QWidget( parent ), m_tp((LineEdit::LType)-1), bt_fld(NULL), ed_fld(NULL), mPrev(!prev_dis)
 {
     QHBoxLayout *box = new QHBoxLayout(this);
     box->setMargin(0);
     box->setSpacing(0);
 
-    if( !prev_dis )
-    {
-	bt_fld = new QPushButton(this);
-	bt_fld->setIcon(QIcon(":/images/ok.png"));
-	bt_fld->setIconSize(QSize(12,12));
-	bt_fld->setSizePolicy( QSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed) );
-	bt_fld->setMaximumWidth(15);
-	//bt_fld->setMinimumSize(15,15);
-	//bt_fld->setFlat( true );
-	bt_fld->setEnabled( false );
-	bt_fld->setVisible( false );
-	bt_fld->blockSignals( true );
-	connect( bt_fld, SIGNAL( pressed() ), this, SLOT( applySlot() ) );
-	box->addWidget(bt_fld);
-    }
     setType(tp);
 }
 
-bool LineEdit::isEdited( )
+void LineEdit::viewApplyBt( bool view )
 {
-    if( bt_fld && bt_fld->isVisible() )	return true;
-    return false;
+    if( view == (bool)bt_fld ) return;
+
+    if( view && !bt_fld )
+    {
+	bt_fld = new QPushButton(this);
+	bt_fld->setIcon( QIcon(":/images/ok.png") );
+	bt_fld->setIconSize( QSize(12,12) );
+	bt_fld->setSizePolicy( QSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed) );
+	bt_fld->setMaximumWidth( 15 );
+	connect( bt_fld, SIGNAL( clicked() ), this, SLOT( applySlot() ) );
+	layout()->addWidget( bt_fld );
+    }
+    if( !view && bt_fld ) { bt_fld->deleteLater(); bt_fld = NULL; }
 }
+
+bool LineEdit::isEdited( )	{ return bt_fld; }
 
 void LineEdit::setType( LType tp )
 {
     if( tp == m_tp ) return;
 
-    //- Delete previous -
+    //> Delete previous
     if( tp >= 0 && ed_fld ) delete ed_fld;
 
-    //- Create new widget -
+    //> Create new widget
     switch( tp )
     {
 	case Text:
@@ -470,13 +468,7 @@ void LineEdit::setType( LType tp )
 void LineEdit::changed( )
 {
     //> Enable apply
-    if( bt_fld && !bt_fld->isEnabled() )
-    {
-	bt_fld->setEnabled( true );
-	bt_fld->setVisible( true );
-	bt_fld->blockSignals( false );
-	//QWidget::setTabOrder( mod->getFocusedWdg(ed_fld), mod->getFocusedWdg(bt_fld) );
-    }
+    if( mPrev && !bt_fld )	viewApplyBt(true);
 
     emit valChanged(value());
 }
@@ -511,12 +503,7 @@ void LineEdit::setValue( const QString &txt )
 
     m_val = txt;
 
-    if( bt_fld && bt_fld->isEnabled() )
-    {
-        bt_fld->setEnabled( false );
-        bt_fld->setVisible( false );
-        bt_fld->blockSignals( true );
-    }
+    if( bt_fld ) viewApplyBt(false);
 }
 
 void LineEdit::setCfg(const QString &cfg)
@@ -579,12 +566,7 @@ void LineEdit::setCfg(const QString &cfg)
 	    break;
 	}
     }
-    if( bt_fld && bt_fld->isEnabled() )
-    {
-	bt_fld->setEnabled( false );
-	bt_fld->setVisible( false );
-	bt_fld->blockSignals( true );
-    }
+    if( bt_fld ) viewApplyBt(false);
 }
 
 QString LineEdit::value()
@@ -604,9 +586,7 @@ QString LineEdit::value()
 
 void LineEdit::applySlot( )
 {
-    bt_fld->setEnabled( false );
-    bt_fld->setVisible( false );
-    bt_fld->blockSignals( true );
+    viewApplyBt(false);
 
     m_val = value();
 
@@ -615,20 +595,20 @@ void LineEdit::applySlot( )
 
 bool LineEdit::event( QEvent * e )
 {
-    if( e->type() == QEvent::KeyRelease && bt_fld && bt_fld->isEnabled() )
+    if( e->type() == QEvent::KeyRelease && bt_fld )
     {
-        QKeyEvent *keyEvent = (QKeyEvent *)e;
-        if( keyEvent->key() == Qt::Key_Enter || keyEvent->key() == Qt::Key_Return )
-        {
+	QKeyEvent *keyEvent = (QKeyEvent *)e;
+	if( keyEvent->key() == Qt::Key_Enter || keyEvent->key() == Qt::Key_Return )
+	{
 	    bt_fld->animateClick( );
 	    return true;
-        }
-        else if(keyEvent->key() == Qt::Key_Escape )
-        {
+	}
+	else if(keyEvent->key() == Qt::Key_Escape )
+	{
 	    emit cancel();
 	    setValue(m_val);
 	    return true;
-        }
+	}
     }
     return QWidget::event(e);
 }
