@@ -1,3 +1,9 @@
+2009-08-07 Roman
+- /System/FLibSYS: The algorithm of realisation function floatMergeWord() is changed for fix strict-aliasing rules.
+- FIX:/UI/QTCfg, /UI/Vision: Events going to underlie button on time increase and decrease buttons is fixed for LineEdit element on last QT 4.5 and x86_64.
+    The problem fixed not partialy by cause QT bug.
+
+
 2009-08-06 Roman
 - !!:/UI/WebCfg: Interface translation to German is added by Irina Popkova.
 - !!:/SYS: Removed files which creation by "autoreconf -iv" from repository.
